# opencap-processing

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  README_OpenCap.md  batchDownload.ipynb  batchDownload.py  constants.py  createAuthenticationEnvFile.py  example.ipynb  example.py  example_kinetics.py  example_kinetics_dj_delete.py  example_kinetics_run_delete.py  example_kinetics_sts_delete.py  example_kinetics_walk_delete.py  requirements.txt  testCustomBarPlot.py  utils.py  utilsAPI.py  utilsAuth.py  utilsAuthentication.py  utilsDynamicSimulations.py  utilsKinematics.py  utilsOpenSim.py  utilsPlotting.py  utilsProcessing.py  utilsTRC.py
ActivityAnalyses/: dropjump_analysis.py  gait_analysis.py  squat_analysis.py  y_balance_analysis.py
ActivityAnalyses/ActivityClasses/: gaitAnalysis.py
ActivityAnalyses/Data/03284efb-2244-4a48-aec9-abc34afdffc8/: sessionMetadata.yaml
ActivityAnalyses/Data/03284efb-2244-4a48-aec9-abc34afdffc8/MarkerData/: walk.trc
ActivityAnalyses/Data/03284efb-2244-4a48-aec9-abc34afdffc8/OpenSimData/Kinematics/: walk.mot
ActivityAnalyses/Data/03284efb-2244-4a48-aec9-abc34afdffc8/OpenSimData/Model/: LaiArnoldModified2017_poly_withArms_weldHand_scaled.osim
ActivityAnalyses/LambdaFunctions/: analyzeGait.py
Examples/: example_COM_analysis.ipynb  example_COM_analysis.py  example_alignement.py  example_check_metadata.py  example_dropjump_analysis.py  example_gait_analysis.py  example_gait_analysis_planeks.py  example_get_sessions_subject.py  example_get_user_sessions.py  example_integrate_forceplates.py  example_squat_analysis.py  example_trim_videos.py  example_walking_opensimAD.py  kubernetes_api.py  metadata_to_check.txt  plotCOM.py  test_gait_analysis.py
Examples/ExampleData/: LaiUhlrich2022_scaled.osim  jump2.mot
Examples/ForcePlateIntegration/: example_integrate_forceplates.py  readme.md
Examples/ForcePlateIntegration/ID/: Setup_ExternalLoads.xml
Examples/ForcePlateIntegration/ID_setup/: Setup_ID.xml
Functions/: gait_analysis.py
GaitProcessing/: README.md  batch_processing_gait_simulations.py  data_info.py  extract_features.py  gait_processing.py  gait_processing_alignment.py
Moco/: README.md
Moco/exampleSquat/: exampleSquat.m  squats1_videoAndMocap.mot
Moco/exampleWalking/: exampleWalking.m  walking1_videoAndMocap.mot
Moco/models/: LaiArnoldModified2017_contacts.osim
Mono/: center_mot_file.py  gait_simulation.py  squat_simulation.py  translation_error.py
OMA_OpenCapPipeline/: dataExploration.ipynb  errorVisualization.ipynb  movenetSmoothing.ipynb  processing.py
OpenSimPipeline/InverseDynamics/: DefaultPosition_rajagopal.mot
OpenSimPipeline/InverseKinematics/: Setup_InverseKinematics_Mono.xml
OpenSimPipeline/JointReaction/: Setup_JointReaction.xml  computeJointLoading.py
OpenSimPipeline/Models/: LaiArnoldModified2017_poly_withArms_weldHand.osim  LaiUhlrich2022_KA.osim
OpenSimPipeline/MuscleAnalysis/: DummyMotion_KA.mot  DummyMotion_rajagopal2016.mot  Setup_MA.xml
Resources/: README.txt
UtilsDynamicSimulations/OpenSimAD/: README.md  boundsOpenSimAD.py  functionCasADiOpenSimAD.py  guessesOpenSimAD.py  initialGuessOpenSimAD.py  mainOpenSimAD.py  muscleDataOpenSimAD.py  muscleModelOpenSimAD.py  plotsOpenSimAD.py  polynomialsOpenSimAD.py  settingsOpenSimAD.py  utilsKineticsOpenSimAD.py  utilsOpenSimAD.py
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/Simbody/include/: SimTKlapack.h  SimTKmath.h  SimTKsimbody.h
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/Simbody/include/SimTKcommon/: Scalar.h  Testing.h
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/Simbody/include/simmath/: MultibodyGraphMaker.h
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/Simbody/lib/: SimTKcommon_recorder.lib  SimTKmath_recorder.lib  SimTKsimbody_recorder.lib
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/include/OpenSim/: OpenSim.h
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/include/OpenSim/Common/: AbstractProperty.h  C3DFileAdapter.h  CSVFileAdapter.h  Component.h  ComponentOutput.h  Constant.h  DataAdapter.h  DataTable.h  Event.h  (+52 more)
UtilsDynamicSimulations/OpenSimAD/OpenSimAD-install/sdk/lib/: osimCommon.lib  osimSimulation.lib
UtilsDynamicSimulations/OpenSimAD/buildExpressionGraph/: CMakeLists.txt
UtilsDynamicSimulations/OpenSimAD/buildExpressionGraph/linux/: CMakeLists.txt
UtilsDynamicSimulations/OpenSimAD/buildExpressionGraph/macOS/: CMakeLists.txt
UtilsDynamicSimulations/OpenSimAD/buildExpressionGraph/windows/: CMakeLists.txt
UtilsDynamicSimulations/OpenSimAD/buildExternalFunction/: CMakeLists.txt
notebooks/: plot_mot.ipynb  plot_muscle_simulations.ipynb  plot_torque_simulations.ipynb
(+163 files in other folders)
